codegen/ui_tests/rhai_fn_rename_to_prop_getter.stderr
error: use attribute 'getter = "foo"' instead
  --> ui_tests/rhai_fn_rename_to_prop_getter.rs:12:15
   |
12 |     #[rhai_fn(name = "get$foo")]
   |               ^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `test_module`
  --> ui_tests/rhai_fn_rename_to_prop_getter.rs:23:8
   |
23 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of unresolved module or unlinked crate `test_module`
   |
   = help: if you wanted to use a crate named `test_module`, use `cargo add test_module` to add it to your `Cargo.toml`
